--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,200;0,300;0,400;0,700;0,900;1,300&display=swap');
 body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+html {
+    font-family: "Overpass", sans-serif !important;
+    display: inline !important;
+    margin: auto !important;
+    background-color: #222222 !important;
+    color: #f2f2f2 !important;
+}
+
+a {
+    color: #f2f2f2 !important;
+}
+
+.row {
+    display: flex !important;
 }
