--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,200;0,300;0,400;0,700;0,900;1,300&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,200;0,300;0,400;0,700;0,900;1,300&display=swap');
 body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
@@ -7,7 +7,6 @@ body {
 
 html {
     font-family: "Overpass", sans-serif !important;
-    display: inline !important;
     margin: auto !important;
     background-color: #222222 !important;
     color: #f2f2f2 !important;
@@ -19,4 +18,4 @@ a {
 
 .row {
     display: flex !important;
-}
+} */
