including local font

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,200;0,300;0,400;0,700;0,900;1,300&display=swap'); */
+@font-face {
+    font-family: 'Overpass';
+    src: local('Overpass'), url(./fonts/overpass.woff2) format('woff2');
+}
 
 #mt_react {
     font-family: "Overpass", sans-serif !important;
