--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 #mt_react {
     font-family: "Overpass", sans-serif !important;
-    margin: auto !important;
+    margin: 15px auto !important;
     background-color: #222222 !important;
     color: #f2f2f2 !important;
     margin: 0;
